--- a/css/styles.css
+++ b/css/styles.css
@@ -10,9 +10,6 @@
     margin-top: 30px;
     background-position-y:top;
     margin-top:100px;
-
-
-/*    background-size: cover;*/
     margin-top: 100px;
 }
 
@@ -28,38 +25,35 @@ header{
 }
 
 
-.grow{
+/*.grow{
     color: white;
     padding-top: 150px;
     font-size: 50px;
     text-shadow: -1px 2px 12px #000;
 
 
-}
+}*/
 
 .gardenOfYourMind{
-    text-shadow: -1px 2px 12px #000;
+    padding-top: 220px;
+    text-shadow: black 0.1em 0.1em 0.2em;
     color: white;
-    font-size: 25px;
+    font-size: 30px;
     text-transform: capitalize;
-
-
 }
-
-
 
 a{
     text-transform: capitalize;
 }
 
 .fontSize{
-    font-size: 20px;
+    font-size: 15px;
 }
 
-/*navbar-default navbar-fixed-top navbar-custom affix-top*/
+#roseKoenings{
+    font-size: 25px;
 
-/*.navbar-custom{
-    background:#2C3E50;
-    opacity: 0.4;
+}
 
-}*/
+
+
