--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 
 #bannerPhoto{
-    background: url("../img/roseNoelleBanner.png");
+    background: url("../img/rose.jpg");
     max-width: 100%;
 /*    min-height: 600px;*/
     height:500px;
@@ -35,11 +35,13 @@ header{
 }*/
 
 .gardenOfYourMind{
-    padding-top: 220px;
+    padding-top: 240px;
     text-shadow: black 0.1em 0.1em 0.2em;
     color: white;
-    font-size: 30px;
+    font-size: 40px;
     text-transform: capitalize;
+    font-family: 'Calligraffitti', cursive;
+    text-align: center;
 }
 
 a{
@@ -115,8 +117,116 @@ a{
     background-color: #1FA4B6;
 }
 
+.roseLogoArtwork{
+    background-color: #2C3E50;
+}
+
 section.success {
     background-color: #1FA4B6;
 }
 
+#artworkHeaderColor{
+    color: white;
+}
+
+.navbar-custom .navbar-nav li.active a{
+    background:#1FA4B6;
+
+}
+
+.navbar-nav li.active a:focus, .navbar-custom .navbar-nav li.active a:hover {
+    background:#1FA4B6;
+}
+
+.navbar-custom .navbar-nav li.active a:active, .navbar-custom .navbar-nav li.active a:focus, .navbar-custom .navbar-nav li.active a:hover {
+    background:#1FA4B6;
+}
+
+#portfolio .portfolio-item .portfolio-link .caption {
+    background:#1FA4B6;
+}
+
+.btn-success {
+    background-color:#1FA4B6;
+    border-color:#1FA4B6;
+}
+
+a, a.active, a:active, a:focus, a:hover {
+    color:#1FA4B6;
+}
+
+.fa:before {
+    color:#1FA4B6;
+}
+
+.contactEmail{
+    text-align: center;
+    font-size: 1.75em;
+    color:black;
+    font-family: Lato,'Helvetica Neue',Helvetica,Arial,sans-serif;
+}
+
+#artwork{
+    background-color: #2C3E50;
+}
+
+.carousel-control.right {
+    background-image: #2C3E50;
+    background-image: -webkit-linear-gradient(left,rgba(0,0,0,0) 0,rgba(0,0,0,0) 100%);
+    background-image: -o-linear-gradient(left,rgba(0,0,0,0) 0,rgba(0,0,0,0) 100%);
+}
+
+.carousel-control.left {
+    background-image: #2C3E50;
+    background-image: -webkit-linear-gradient(right,rgba(0,0,0,0) 0,rgba(0,0,0,0) 100%); 
+    background-image: -o-linear-gradient(right,rgba(0,0,0,0) 0,rgba(0,0,0,0) 100%); 
+}
+
+/*
+ * Start Bootstrap - Full Slider (http://startbootstrap.com/)
+ * Copyright 2013-2016 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
+ */
+
+.carousel,
+.item,
+.active {
+    height: 100%;
+}
+
+.carousel-inner {
+    height: 100%;
+}
+
+/* Background images are set within the HTML using inline CSS, not here */
+
+.fill {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+.carousel-caption {
+    padding-bottom: 0px;
+    font-size: 10px;
+}
+
+h4{
+    text-transform: capitalize;
+    font-family: Lato,'Helvetica Neue',Helvetica,Arial,sans-serif;
+    line-height: 1.42857143;
+    text-align: left;
+}
+
+.imageBottomSpace{
+    padding-bottom: 50px;
+}
+
+.carousel-indicators {
+    bottom: -80px;
+}
 
