--- a/css/styles.css
+++ b/css/styles.css
@@ -2,15 +2,11 @@
 #bannerPhoto{
     background: url("../img/rose.jpg");
     max-width: 100%;
-/*    min-height: 600px;*/
     height:500px;
-/*    margin:auto 0;*/
     text-align:center;
     background-repeat:no-repeat;
-    margin-top: 30px;
     background-position-y:top;
-    margin-top:100px;
-    margin-top: 100px;
+    margin-top: 80px;
 }
 
 header{
@@ -21,9 +17,16 @@ header{
 
 .left{
     float:left;
-    margin-left:-80px;
+/*    margin-left:0px;*/
+    padding-right: 15px;
 }
 
+.navbar-brand {
+    float:none;
+    padding:none;
+    height:20px;
+    line-height: 20px;
+}
 
 /*.grow{
     color: white;
@@ -40,8 +43,9 @@ header{
     color: white;
     font-size: 40px;
     text-transform: capitalize;
-    font-family: 'Calligraffitti', cursive;
+/*    font-family: 'Calligraffitti', cursive;*/
     text-align: center;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 a{
@@ -159,74 +163,71 @@ a, a.active, a:active, a:focus, a:hover {
     color:#1FA4B6;
 }
 
-.contactEmail{
+.contactEmail a {
+    display: block;
     text-align: center;
     font-size: 1.75em;
-    color:black;
+/*    color:black;*/
     font-family: Lato,'Helvetica Neue',Helvetica,Arial,sans-serif;
+    text-transform: lowercase !important;
 }
 
-#artwork{
-    background-color: #2C3E50;
+.portfolio-item .fa:before{
+    color:white;
 }
 
-.carousel-control.right {
-    background-image: #2C3E50;
-    background-image: -webkit-linear-gradient(left,rgba(0,0,0,0) 0,rgba(0,0,0,0) 100%);
-    background-image: -o-linear-gradient(left,rgba(0,0,0,0) 0,rgba(0,0,0,0) 100%);
+@media (min-width: 768px){
+    .navbar-nav>li>a{
+        padding-top: none;
+        padding-bottom: none;
+    }
 }
 
-.carousel-control.left {
-    background-image: #2C3E50;
-    background-image: -webkit-linear-gradient(right,rgba(0,0,0,0) 0,rgba(0,0,0,0) 100%); 
-    background-image: -o-linear-gradient(right,rgba(0,0,0,0) 0,rgba(0,0,0,0) 100%); 
+.navbar-nav>li>a{
+    padding-top: none;
+    padding-bottom: none;
+    line-height: none;
 }
 
-/*
- * Start Bootstrap - Full Slider (http://startbootstrap.com/)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
- */
+/*.nav>li>a{
+    position: none;
+    display:none;
+}*/
 
-.carousel,
-.item,
-.active {
-    height: 100%;
+
+@media (min-width: 768px){
+    .navbar-custom {
+        padding-top: 5px;
+    }
+
+    .container {
+        width: 100%;
+    }
 }
 
-.carousel-inner {
-    height: 100%;
+
+
+.navbar-brand{
+    line-height: 40px !important;
 }
 
-/* Background images are set within the HTML using inline CSS, not here */
-
-.fill {
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+.navbar-right{
+    margin-right: none;
 }
 
-.carousel-caption {
-    padding-bottom: 0px;
-    font-size: 10px;
+#mainNav {
+    padding: 10px 0;
 }
 
-h4{
-    text-transform: capitalize;
-    font-family: Lato,'Helvetica Neue',Helvetica,Arial,sans-serif;
-    line-height: 1.42857143;
-    text-align: left;
+.container {
+    padding: 10px 30px 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-.imageBottomSpace{
-    padding-bottom: 50px;
-}
 
-.carousel-indicators {
-    bottom: -80px;
+@media (min-width: 992px){
+    .container {
+        width: 100%;
+    }
 }
-
