--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 
-#bannerPhoto{
+#bannerPhoto {
     background: url("../img/rose.jpg");
     max-width: 100%;
     height:500px;
@@ -9,15 +9,13 @@
     margin-top: 80px;
 }
 
-header{
+header {
     background:#2C3E50;
     text-align:center;
-
 }
 
-.left{
+.left {
     float:left;
-/*    margin-left:0px;*/
     padding-right: 15px;
 }
 
@@ -28,35 +26,25 @@ header{
     line-height: 20px;
 }
 
-/*.grow{
-    color: white;
-    padding-top: 150px;
-    font-size: 50px;
-    text-shadow: -1px 2px 12px #000;
-
-
-}*/
-
-.gardenOfYourMind{
+.gardenOfYourMind {
     padding-top: 240px;
     text-shadow: black 0.1em 0.1em 0.2em;
     color: white;
     font-size: 40px;
     text-transform: capitalize;
-/*    font-family: 'Calligraffitti', cursive;*/
     text-align: center;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-a{
+a {
     text-transform: capitalize;
 }
 
-.fontSize{
+.fontSize {
     font-size: 15px;
 }
 
-#roseKoenings{
+#roseKoenings {
     font-size: 25px;
 
 }
@@ -65,17 +53,16 @@ a{
     color:#4d6077;
 }
 
-
-.roseHr{
+.roseHr {
     z-index: 1;
     position: inherit;
 }
 
-.intro-text{
+.intro-text { 
     height: 300px;
 }
 
-.AboutSpace{
+.AboutSpace {
     height:150px;
 }
 
@@ -86,7 +73,7 @@ a{
 
 
 
-.hrStyles{
+.hrStyles {
     background-color: #fff;
     position:absolute;
     height:4px;
@@ -96,12 +83,11 @@ a{
     left: 37.5%;
 }
 
-.roseLogo{
+.roseLogo {
     background-color: #2C3E50;
-
 }
 
-.hrBlueStyles{
+.hrBlueStyles {
     background-color: #2C3E50;
     position:absolute;
     height:4px;
@@ -112,16 +98,16 @@ a{
     z-index: 0 !important;
 }
 
-.roseLogoWhite{
+.roseLogoWhite {
     background-color: #fff;
 
 }
 
-.roseLogoAbout{
+.roseLogoAbout {
     background-color: #1FA4B6;
 }
 
-.roseLogoArtwork{
+.roseLogoArtwork {
     background-color: #2C3E50;
 }
 
@@ -129,11 +115,11 @@ section.success {
     background-color: #1FA4B6;
 }
 
-#artworkHeaderColor{
+#artworkHeaderColor {
     color: white;
 }
 
-.navbar-custom .navbar-nav li.active a{
+.navbar-custom .navbar-nav li.active a {
     background:#1FA4B6;
 
 }
@@ -159,43 +145,33 @@ a, a.active, a:active, a:focus, a:hover {
     color:#1FA4B6;
 }
 
-.fa:before {
-    color:#1FA4B6;
+.resources-list a {
+    color: #1FA4B6;
 }
 
 .contactEmail a {
     display: block;
     text-align: center;
-    font-size: 1.75em;
-/*    color:black;*/
+    font-size: 23px;
+    padding-top: 5px;
     font-family: Lato,'Helvetica Neue',Helvetica,Arial,sans-serif;
     text-transform: lowercase !important;
 }
 
-.portfolio-item .fa:before{
-    color:white;
-}
-
-@media (min-width: 768px){
-    .navbar-nav>li>a{
+@media (min-width: 768px) {
+    .navbar-nav>li>a {
         padding-top: none;
         padding-bottom: none;
     }
 }
 
-.navbar-nav>li>a{
+.navbar-nav>li>a {
     padding-top: none;
     padding-bottom: none;
     line-height: none;
 }
 
-/*.nav>li>a{
-    position: none;
-    display:none;
-}*/
-
-
-@media (min-width: 768px){
+@media (min-width: 768px) {
     .navbar-custom {
         padding-top: 5px;
     }
@@ -205,13 +181,11 @@ a, a.active, a:active, a:focus, a:hover {
     }
 }
 
-
-
-.navbar-brand{
+.navbar-brand {
     line-height: 40px !important;
 }
 
-.navbar-right{
+.navbar-right {
     margin-right: none;
 }
 
@@ -225,9 +199,53 @@ a, a.active, a:active, a:focus, a:hover {
     box-sizing: border-box;
 }
 
-
-@media (min-width: 992px){
-    .container {
+@media (min-width: 992px) {
+    .container { 
         width: 100%;
     }
+}
+
+@media (max-width: 733px) {
+    .gardenOfYourMind {
+        display: none;
+    }
+}
+
+@media (max-width: 733px) {
+    .intro-text {
+        height: 210px;
+    }
+}
+
+.captionAlignLeft {
+    text-align: left;
+}
+
+section.success {
+    padding-top: 80px;
+}
+
+.btn-outline {
+    margin-bottom: 0px;
+}
+
+.navbar-custom .navbar-toggle:focus, .navbar-custom .navbar-toggle:hover {
+    background-color: #1FA4B6;
+    border-color: #fff;
+}
+
+.btnTopMargin {
+    margin-top: 50px;
+}
+
+.faWhite:before {
+    color:white;
+}
+
+.btn-outline.active, .btn-outline:active, .btn-outline:focus, .btn-outline:hover {
+    color: #1FA4B6;
+}
+
+.fa-download:active, .fa-download:focus, .fa-download:hover {
+    color: #1FA4B6;
 }
