--- a/css/styles.css
+++ b/css/styles.css
@@ -217,6 +217,12 @@ a, a.active, a:active, a:focus, a:hover {
     }
 }
 
+@media (max-width: 733px) {
+    .left {
+        padding-right: 0px;
+    }
+}
+
 .captionAlignLeft {
     text-align: left;
 }
