--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,6 @@
 
 #bannerPhoto {
-    background: url("../img/rose.jpg");
-    max-width: 100%;
-    height:500px;
+    position: relative;
     text-align:center;
     background-repeat:no-repeat;
     background-position-y:top;
@@ -26,8 +24,27 @@ header {
     line-height: 20px;
 }
 
+#bannerImg {
+    width:100%;
+    height: auto;
+}
+
+@media (max-width: 1300px) {
+    #bannerImg {
+        display: none;
+    }
+
+    #bannerPhoto {
+        background-image: url("../img/rose.jpg");
+        height:500px;
+    }
+}
+
 .gardenOfYourMind {
-    padding-top: 240px;
+    position: absolute;
+    top: 50%;
+    width:100%;
+    margin: 0 auto;
     text-shadow: black 0.1em 0.1em 0.2em;
     color: white;
     font-size: 40px;
@@ -205,7 +222,7 @@ a, a.active, a:active, a:focus, a:hover {
     }
 }
 
-@media (max-width: 733px) {
+@media (max-width: 768px) {
     .gardenOfYourMind {
         display: none;
     }
@@ -214,6 +231,13 @@ a, a.active, a:active, a:focus, a:hover {
 @media (max-width: 733px) {
     .intro-text {
         height: 210px;
+    }
+}
+
+@media (max-width: 1440px) {
+    .intro-text {
+        height: 300px;
+        padding-top: 20px;
     }
 }
 
